AtomicString(ASCIILiteral) should not compile https://bugs.webkit.org/show_bug.cgi?id=95413

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-08-30
Reviewed by Adam Barth.

* wtf/text/AtomicString.h:
(AtomicString): Declare the constructor from ASCIILiteral private to ensure it is
not used by accident.

Canonical link: https://commits.webkit.org/113400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127233 268f45cc-cd09-0410-ab3c-d52691b4dbfc